package dev.grigory.peaje_y_vehiculos;

public class Car {

    private String plate;

    public Car(String plate) {
        this.plate = plate;
    }

    public String getPlate() {
        return plate;
    }
}
