package dev.grigory.peaje_y_vehiculos;

public class Motorcycle {
    private String plate;

    public Motorcycle(String plate) {
        this.plate = plate;
    }

    public String getPlate() {
        return plate;
    }
}
